+: generate_corpus function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,16 +7,11 @@ export(get_tokens_from_valueset)
 export(get_valueset)
 export(get_valuesets_for_target_variables)
 export(split_dataframe_by_identifier)
+import(dplyr)
+import(somersaulteR)
+import(tidyr)
 importFrom(caterpillaR,delete_phrase_from_string)
-importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
-importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
-importFrom(dplyr,mutate)
 importFrom(dplyr,select)
-importFrom(dplyr,summarize)
-importFrom(dplyr,ungroup)
-importFrom(somersaulteR,call_mr_clean)
-importFrom(somersaulteR,mutate_all_na_to_blank)
+importFrom(magrittr,"%>%")
 importFrom(stringr,str_remove_all)
-importFrom(tidyr,separate)
