--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_tokens_from_valueset)
 export(get_valueset)
 export(get_valuesets_for_target_variables)
 export(split_dataframe_by_identifier)
+export(update_key_with_new_source_values)
 import(dplyr)
 import(somersaulteR)
 import(tidyr)
