+ inner_join_key function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_tokens_for_target_vars)
 export(get_tokens_from_valueset)
 export(get_valueset)
 export(get_valuesets_for_target_variables)
+export(inner_join_key)
 export(split_dataframe_by_identifier)
 export(update_key_with_new_source_values)
 import(dplyr)
