bug fix: key_from_csv and key_from_xlsx functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(identity_from_gs)
 export(identity_from_xlsx)
 export(key_from_csv)
 export(key_from_gs)
+export(key_from_xlsx)
 export(set_key_location)
 import(dplyr)
 import(mirCat)
