--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(identity_from_xlsx)
 export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
-export(set_key_location)
+export(set_paths)
 import(dplyr)
 import(mirCat)
 import(mirroR)
