+: interactive single search for PROGRESS_LIST$QUEUE function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(bulk_flag_rows_for_external_followup)
 export(bulk_timestamp_rows_for_completed_external_followup)
 export(create_progress_list)
 export(flag_rows_for_denovo_cui)
+export(get_first_possible_cui)
 export(identity_from_csv)
 export(identity_from_gs)
 export(identity_from_xlsx)
+export(interactive_single_term_search)
 export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
@@ -15,6 +17,7 @@ export(set_paths)
 import(dplyr)
 import(mirCat)
 import(mirroR)
+import(mySeagull)
 import(readr)
 import(readxl)
 import(somersaulteR)
