+: interactive_double_term_search function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_first_possible_cui)
 export(identity_from_csv)
 export(identity_from_gs)
 export(identity_from_xlsx)
+export(interactive_double_term_search)
 export(interactive_single_term_search)
 export(key_from_csv)
 export(key_from_gs)
