--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bulk_edit_external_followup)
 export(bulk_flag_rows_for_external_followup)
 export(bulk_timestamp_rows_for_completed_external_followup)
 export(create_progress_list)
+export(double_query_mrconso)
 export(flag_rows_for_denovo_cui)
 export(get_first_possible_cui)
 export(identity_from_csv)
