+: view_progress_list_nrow function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(key_from_gs)
 export(key_from_xlsx)
 export(progress_list)
 export(set_paths)
+export(view_progress_list_nrow)
 import(dplyr)
 import(mirCat)
 import(mirroR)
