--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
 export(progress_list)
+export(report)
 export(set_paths)
 export(view_progress_list_nrow)
 import(dplyr)
