+: str_match_with_rearrangement function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(key_from_xlsx)
 export(progress_list)
 export(report)
 export(set_paths)
+export(str_match_with_rearrangement)
 export(view_progress_list_nrow)
 import(dplyr)
 import(mirCat)
@@ -27,6 +28,7 @@ import(mySeagull)
 import(readr)
 import(readxl)
 import(somersaulteR)
+import(stringr)
 import(typewriteR)
 importFrom(crayon,red)
 importFrom(lubridate,ymd_hms)
