+: str_match_bw_parentheses and support query function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,10 @@ export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
 export(progress_list)
+export(query_mrconso_data_exact_limit_one)
 export(report)
 export(set_paths)
+export(str_match_bw_parentheses)
 export(str_match_with_rearrangement)
 export(view_progress_list_nrow)
 import(dplyr)
