+: scavenge_na_concepts function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(key_from_xlsx)
 export(progress_list)
 export(query_mrconso_data_exact_limit_one)
 export(report)
+export(scavenge_na_concepts)
 export(set_paths)
 export(str_match_bw_parentheses)
 export(str_match_with_rearrangement)
