--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(bulk_bucket_denovos)
 export(bulk_edit_external_followup)
 export(bulk_flag_rows_for_external_followup)
 export(bulk_timestamp_rows_for_completed_external_followup)
-export(create_progress_list)
 export(double_query_mrconso)
 export(flag_rows_for_denovo_cui)
 export(get_first_possible_cui)
@@ -14,6 +13,7 @@ export(identity_from_gs)
 export(identity_from_xlsx)
 export(interactive_double_term_search)
 export(interactive_single_term_search)
+export(join_progress_list)
 export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
