+: store_new_cui_in_local_key function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(query_mrconso_data_exact_limit_one)
 export(report)
 export(scavenge_na_concepts)
 export(set_paths)
+export(store_new_cui_in_local_key)
 export(str_match_bw_parentheses)
 export(str_match_with_rearrangement)
 export(view_progress_list_nrow)
