+: bulk_store_new_cui_in_key function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(append_staged_to_key)
 export(bulk_bucket_denovos)
 export(bulk_edit_external_followup)
 export(bulk_flag_rows_for_external_followup)
+export(bulk_store_new_cui_in_local_key)
 export(bulk_timestamp_rows_for_completed_external_followup)
 export(double_query_mrconso)
 export(flag_rows_for_denovo_cui)
