+: observe_parked_for_denovo_to_bucket function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(join_progress_list)
 export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
+export(observe_parked_for_denovo_to_bucket)
 export(progress_list)
 export(query_mrconso_data_exact_limit_one)
 export(report)
