+: observe_ functions and create_new_table_of_contents

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(bulk_edit_external_followup)
 export(bulk_flag_rows_for_external_followup)
 export(bulk_store_new_cui_in_local_key)
 export(bulk_timestamp_rows_for_completed_external_followup)
+export(create_new_table_of_contents)
 export(double_query_mrconso)
 export(flag_rows_for_denovo_cui)
 export(get_first_possible_cui)
@@ -19,6 +20,8 @@ export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
 export(observe_parked_for_denovo_to_bucket)
+export(observe_parked_for_external_followup)
+export(observe_queue)
 export(progress_list)
 export(query_mrconso_data_exact_limit_one)
 export(report)
