+: lookup_native_attributes function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(join_progress_list)
 export(key_from_csv)
 export(key_from_gs)
 export(key_from_xlsx)
+export(lookup_native_attributes)
 export(observe_parked_for_denovo_to_bucket)
 export(observe_parked_for_external_followup)
 export(observe_queue)
