+: collect_query_terms function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(bulk_edit_external_followup)
 export(bulk_flag_rows_for_external_followup)
 export(bulk_store_new_cui_in_local_key)
 export(bulk_timestamp_rows_for_completed_external_followup)
+export(collect_query_terms)
 export(create_new_table_of_contents)
 export(double_query_mrconso)
 export(flag_rows_for_denovo_cui)
@@ -34,6 +35,7 @@ export(str_match_bw_parentheses)
 export(str_match_with_rearrangement)
 export(view_progress_list_nrow)
 export(write_mrconso_net)
+import(crayon)
 import(dplyr)
 import(mirCat)
 import(mirroR)
