+: mrconso_coordinate feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(identity_from_gs)
 export(identity_from_xlsx)
 export(interactive_double_term_search)
 export(interactive_single_term_search)
+export(jatpat_mrconso_coordinate)
 export(join_progress_list)
 export(key_from_csv)
 export(key_from_gs)
@@ -34,6 +35,7 @@ export(store_new_cui_in_local_key)
 export(str_match_bw_parentheses)
 export(str_match_with_rearrangement)
 export(view_progress_list_nrow)
+export(write_mrconso_coordinate)
 export(write_mrconso_net)
 import(crayon)
 import(dplyr)
