+: qa_mrconso_net_glossary as bug fix for write_mrconso_net

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(observe_parked_for_denovo_to_bucket)
 export(observe_parked_for_external_followup)
 export(observe_queue)
 export(progress_list)
+export(qa_mrconso_net_glossary)
 export(query_mrconso_data_exact_limit_one)
 export(report)
 export(return_mrconso_net)
@@ -47,6 +48,7 @@ import(readr)
 import(readxl)
 import(somersaulteR)
 import(stringr)
+import(tidyr)
 import(typewriteR)
 importFrom(crayon,red)
 importFrom(lubridate,ymd_hms)
