--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(observe_parked_for_denovo_to_bucket)
 export(observe_parked_for_external_followup)
 export(observe_queue)
 export(progress_list)
+export(progress_list_staged_to_key)
 export(qa_mrconso_net_glossary)
 export(query_mrconso_data_exact_limit_one)
 export(report)
@@ -50,6 +51,7 @@ import(somersaulteR)
 import(stringr)
 import(tidyr)
 import(typewriteR)
+importFrom(crayon,bold)
 importFrom(crayon,red)
 importFrom(lubridate,ymd_hms)
 importFrom(mirCat,list_add)
