bug fix: write_mrconso_net

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(collect_query_terms)
 export(create_new_table_of_contents)
 export(double_query_mrconso)
 export(flag_rows_for_denovo_cui)
+export(generate_next_id_number)
 export(get_first_possible_cui)
 export(identity_from_csv)
 export(identity_from_gs)
@@ -53,6 +54,7 @@ import(tidyr)
 import(typewriteR)
 importFrom(crayon,bold)
 importFrom(crayon,red)
+importFrom(gmp,as.bigz)
 importFrom(lubridate,ymd_hms)
 importFrom(mirCat,list_add)
 importFrom(reshape2,melt)
