+: remove_source_concept_from_key function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(progress_list)
 export(progress_list_staged_to_key)
 export(qa_mrconso_net_glossary)
 export(query_mrconso_data_exact_limit_one)
+export(remove_source_concept_from_key)
 export(report)
 export(return_mrconso_net)
 export(scavenge_na_concepts)
