+: qa_mrconso_net_glossary_2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(observe_queue)
 export(progress_list)
 export(progress_list_staged_to_key)
 export(qa_mrconso_net_glossary)
+export(qa_mrconso_net_glossary_2)
 export(query_mrconso_data_exact_limit_one)
 export(remove_source_concept_from_key)
 export(report)
